# googleCodeJam

./: .gitignore  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  codejam_skeleton.py  pyproject.toml  tox.ini  utils.py
2015/: A_qualification.py  B_qualification.py  Untitled.ipynb
2015/Qualification/: B-qual.py  C-qual.py  C-small-practice.out
2015/Round1A/: A.py  B.py  C-small-practice.out2  C.py
2016/: Qualification_A_Pancakes.py  Qualification_B_Pancakes.py
2016/Qualification/: A.py  B.py
2017/: 1  A-small-attempt0.out  A-small-attempt1.in  A-small-attempt1.out  A-small-attempt2.out  A-small-attempt3.in  A-small-attempt3.out  A-small-attempt4.in  A-small-attempt4.out  A-small-attempt5.in  A-small-attempt5.out  B-large.out  C-large.out  C-small-1-attempt0.in  C_Bathroom_Stalls.py  Qualification_A_Pancakes-v2.py  Qualification_A_Pancakes.py  Qualification_B_Tidy_Numbers.py  Qualification_C_Bathroom_Stalls.py  Untitled.ipynb  fil0  fil2  fil4
2017/Qualification/: A.py  B-large-practice.out  B.py
2017/tmp/: C-small-2-attempt0.in
2017/training/: C-large-practice.out.incorrect
2018/practice_round/: Untitled.ipynb
2018/qualification_round/: 01_saving_the_universe_again.py  02_trouble_sort.py  03_go_gopher.py  04_cubic_ufo.py  04_cubic_ufo_without_scipy.py  Rotating cube without numpy, scipy.ipynb  Rotating cube.ipynb  Untitled.ipynb  testing_tool.py
2018/round_1a/: 01_waffle_choppers.py  Untitled.ipynb  Untitled1.ipynb
2018/round_1b/: Rounding_Error.py
2018/round_1c/: Lollipop_Shop.py  (+2 more)
(+49 files in other folders)
