[tool.poetry]
name = "googlecodejam"
version = "0.1.0"
description = ""
authors = ["Martin hHøy <marhoy@gmail.com>"]

[tool.poetry.dependencies]
python = "3.5.3"
numpy = "1.16.2"
scipy = "1.2.1"

[tool.poetry.dev-dependencies]
ipykernel = "^5.2.0"
pydocstyle = "^5.0.2"
mypy = "^0.770"
flake8 = "^3.7.9"
pylint = "^2.4.4"
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
