[tool.poetry]
name = "googlecodejam"
version = "0.1.0"
description = ""
authors = ["Martin Høy <martin@hoy.priv.no>"]

[tool.poetry.dependencies]
python = "3.7.3"
numpy = "1.16.6"
scipy = "1.2.3"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.0"
black = "^20.8b1"
mypy = "^0.812"
flake8 = "^3.9.0"
pytest = "^6.2.2"
pydocstyle = "^6.0.0"
matplotlib = "^3.4.0"
plotly = "^4.14.3"
pandas = "^1.2.3"
nbformat = "^5.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
