[tool.poetry]
name = "googlecodejam"
version = "0.1.0"
description = ""
authors = ["Martin Høy <martin@hoy.priv.no>"]

[tool.poetry.dependencies]
python = "3.7.3"
# numpy = "1.16.6"
# scipy = "1.2.3"
numpy = "1.19.3"
scipy = "1.5.3"

[tool.poetry.dev-dependencies]
ipykernel = "*"
black = "*"
mypy = "*"
flake8 = "*"
# pytest = "*"
# pydocstyle = "*"
# matplotlib = "*"
# plotly = "*"
# pandas = "*"
# nbformat = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
